--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,8 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
+      - name: actions-setup-cmake
+        uses: jwlawson/actions-setup-cmake@v1.12
       - name: West Init
         run: west init -l config
       - name: West Update
