--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,6 +64,8 @@ jobs:
             ${{ runner.os }}-
       - name: actions-setup-cmake
         uses: jwlawson/actions-setup-cmake@v1.12
+        with:
+          cmake-version: '3.20.x'
       - name: West Init
         run: west init -l config
       - name: West Update
